// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenApiSpecTable when an OpenAPI spec has a URL but no spec renders the OpenAPI spec with a URL and includes badge saying \`missing\` 1`] = `
"<table class=\\"table table-dark\\">
  <thead>
    <tr>
      <th class=\\"component\\">Component</th>
      <th class=\\"teams\\">Teams</th>
      <th class=\\"location\\">Location</th>
      <th class=\\"action\\">Action</th>
      <th class=\\"description\\">Description</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"component\\"><a href=\\"/components/test-id-1\\">Test Name 1</a></td>
      <td class=\\"teams\\">
        <!---->
      </td>
      <td class=\\"location\\">
        https://example.com/openapi-spec-1-1
      </td>
      <td class=\\"action table-secondary\\">
        <div><span class=\\"badge badge-danger\\">OpenApi spec not found</span></div>
      </td>
      <td class=\\"description\\">
        <div>
          <p>Test OpenAPI Spec Description 1 1</p>
        </div>
      </td>
    </tr>
  </tbody>
</table>"
`;

exports[`OpenApiSpecTable when an OpenAPI spec has a file but no spec renders the OpenAPI spec with a file and includes badge saying \`missing\` 1`] = `
"<table class=\\"table table-dark\\">
  <thead>
    <tr>
      <th class=\\"component\\">Component</th>
      <th class=\\"teams\\">Teams</th>
      <th class=\\"location\\">Location</th>
      <th class=\\"action\\">Action</th>
      <th class=\\"description\\">Description</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"component\\"><a href=\\"/components/test-id-1\\">Test Name 1</a></td>
      <td class=\\"teams\\">
        <!---->
      </td>
      <td class=\\"location\\">
        /openapi-spec-1-1.yaml
      </td>
      <td class=\\"action table-secondary\\">
        <div><span class=\\"badge badge-danger\\">OpenApi spec not found</span></div>
      </td>
      <td class=\\"description\\">
        <div>
          <p>Test OpenAPI Spec Description 1 1</p>
        </div>
      </td>
    </tr>
  </tbody>
</table>"
`;

exports[`OpenApiSpecTable when an OpenAPI spec has a spec and a URL renders the OpenAPI spec with a URL 1`] = `
"<table class=\\"table table-dark\\">
  <thead>
    <tr>
      <th class=\\"component\\">Component</th>
      <th class=\\"teams\\">Teams</th>
      <th class=\\"location\\">Location</th>
      <th class=\\"action\\">Action</th>
      <th class=\\"description\\">Description</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"component\\"><a href=\\"/components/test-id-1\\">Test Name 1</a></td>
      <td class=\\"teams\\">
        <!---->
      </td>
      <td class=\\"location\\">
        https://example.com/openapi-spec-1-1
      </td>
      <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-id-1/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
          View OpenAPI spec
        </a></td>
      <td class=\\"description\\">
        <div>
          <p>Test OpenAPI Spec Description 1 1</p>
        </div>
      </td>
    </tr>
  </tbody>
</table>"
`;

exports[`OpenApiSpecTable when an OpenAPI spec has a spec and a file renders the OpenAPI spec with a file 1`] = `
"<table class=\\"table table-dark\\">
  <thead>
    <tr>
      <th class=\\"component\\">Component</th>
      <th class=\\"teams\\">Teams</th>
      <th class=\\"location\\">Location</th>
      <th class=\\"action\\">Action</th>
      <th class=\\"description\\">Description</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"component\\"><a href=\\"/components/test-id-1\\">Test Name 1</a></td>
      <td class=\\"teams\\">
        <!---->
      </td>
      <td class=\\"location\\">
        /openapi-spec-1-1.yaml
      </td>
      <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-id-1/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
          View OpenAPI spec
        </a></td>
      <td class=\\"description\\">
        <div>
          <p>Test OpenAPI Spec Description 1 1</p>
        </div>
      </td>
    </tr>
  </tbody>
</table>"
`;

exports[`OpenApiSpecTable when components is set to multiple components with multiple OpenAPI specs renders the OpenAPI specs 1`] = `
"<table class=\\"table table-dark\\">
  <thead>
    <tr>
      <th class=\\"component\\">Component</th>
      <th class=\\"teams\\">Teams</th>
      <th class=\\"location\\">Location</th>
      <th class=\\"action\\">Action</th>
      <th class=\\"description\\">Description</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"component\\"><a href=\\"/components/test-id-1\\">Test Name 1</a></td>
      <td class=\\"teams\\">
        <!---->
      </td>
      <td class=\\"location\\">
        https://example.com/openapi-spec-1-1
      </td>
      <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-id-1/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
          View OpenAPI spec
        </a></td>
      <td class=\\"description\\">
        <div>
          <p>Test OpenAPI Spec Description 1 1</p>
        </div>
      </td>
    </tr>
    <tr>
      <td class=\\"component\\"><a href=\\"/components/test-id-1\\">Test Name 1</a></td>
      <td class=\\"teams\\">
        <!---->
      </td>
      <td class=\\"location\\">
        https://example.com/openapi-spec-1-2
      </td>
      <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-id-1/openapi-specs/2\\" target=\\"_self\\" class=\\"\\">
          View OpenAPI spec
        </a></td>
      <td class=\\"description\\">
        <div>
          <p>Test OpenAPI Spec Description 1 2</p>
        </div>
      </td>
    </tr>
    <tr>
      <td class=\\"component\\"><a href=\\"/components/test-id-2\\">Test Name 2</a></td>
      <td class=\\"teams\\">
        <!---->
      </td>
      <td class=\\"location\\">
        https://example.com/openapi-spec-2-1
      </td>
      <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-id-2/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
          View OpenAPI spec
        </a></td>
      <td class=\\"description\\">
        <div>
          <p>Test OpenAPI Spec Description 2 1</p>
        </div>
      </td>
    </tr>
    <tr>
      <td class=\\"component\\"><a href=\\"/components/test-id-2\\">Test Name 2</a></td>
      <td class=\\"teams\\">
        <!---->
      </td>
      <td class=\\"location\\">
        https://example.com/openapi-spec-2-2
      </td>
      <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-id-2/openapi-specs/2\\" target=\\"_self\\" class=\\"\\">
          View OpenAPI spec
        </a></td>
      <td class=\\"description\\">
        <div>
          <p>Test OpenAPI Spec Description 2 2</p>
        </div>
      </td>
    </tr>
  </tbody>
</table>"
`;
